--- a/download.html
+++ b/download.html
@@ -34,8 +34,8 @@
 <body>
     <header>
         <div class="fullWidth">
-            <div class="left">
-                <a href="/index.html">
+            <div class="left clearFloat">
+                <a href="./index.html">
                     <span class="logo">
                         <h1>Bright Chat</h1>
                         <img src="./img/LOGO.svg" alt="Bright Chat">
@@ -46,7 +46,37 @@
     </header>
     <main>
         <div class="fullWidth">
-
+            <div class="alignCenter download mobile_hide">Download</div>
+        </div>
+        <div class="imgs">
+            <div class="apple">
+                <div class="phone">
+                    <img src="https://www.theepochtimes.com/assets/uploads/2022/06/24/iphone-12-pro-pacific-blue.jpg" alt="Apple">
+                </div>
+                <div class="QRCode">
+                    <div>IOS</div>
+                    <div>
+                        <img src="https://www.theepochtimes.com/assets/uploads/2022/06/24/download-on-the-app-store-1.png" alt="Download"/>
+                    </div>
+                    <div>
+                        <img src="https://www.theepochtimes.com/assets/uploads/2022/06/24/Group-4.png" alt="Download"/>
+                    </div>
+                </div>
+            </div>
+            <div class="android">
+                <div class="phone">
+                    <img src="https://www.theepochtimes.com/assets/uploads/2022/06/24/Pixel-5.png" alt="Android">
+                </div>
+                <div class="QRCode">
+                    <div>Android</div>
+                    <div>
+                        <img src="https://www.theepochtimes.com/assets/uploads/2022/06/24/badge-download-Google-Play.png" alt="Download">
+                    </div>
+                    <div>
+                        <img src="https://www.theepochtimes.com/assets/uploads/2022/06/24/Group-4.png" alt="Download"/>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
